# aoc2023

./: Cargo.toml  README.md
benches/: all.rs
src/: day04.rs  main.rs
