[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2023"
path = "src/main.rs"

[[bench]]
name = "all"
harness = false

[dependencies]
anyhow = "1.0.75"
criterion = { version = "0.5.1", features = ["html_reports"] }
nom = "7.1.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
